--- a/style.scss
+++ b/style.scss
@@ -35,19 +35,55 @@ button{
 }
 
 .background{
-    background: blanchedalmond;
+    background: rgb(213, 139, 28);
     height:100vh;
     width:100vw;
     position: absolute;
     top:0;
-    left:0;
+    animation: disappear;
+    animation-duration:1s;
+    left:-150%;
     opacity:0;
-    transition: all 0.5s ease-in-out;
 }
 
 .background--open{
-    opacity:1;
+
+    animation: appear;
+    animation-duration: 0.5s;
+    left:0;
+    opacity: 1;
 }
+@keyframes appear {
+  0%{
+    left:-150%;
+    opacity: 0;
+    }
+  10%{
+    left:0;
+    }
+    20%{
+        opacity: 0; 
+    }
+  100%{
+      opacity: 1;
+  }
+}
+@keyframes disappear {
+    0%{
+      opacity: 1;
+      left:0;
+    }
+    90%{
+        opacity: 0;
+        left:0;
+    }
+    95%{
+        left:0;
+    }
+    100%{
+        left:-150%;
+    }
+  }
 
 //upon close menu  items disappear
 @for $index from 1 through 8 {
